--- a/home-page/home.css
+++ b/home-page/home.css
@@ -2,8 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100vh;
     background-color: #181818;
+    height: 100vh;
 }
 
 .header {
@@ -36,9 +36,9 @@ body {
 
 
 .feed {
+    position: relative;
     justify-content: center;
     align-items: center;
-    position: fixed;
     background-color: #181818;
     border-right: 3px solid #262626;
     border-left: 3px solid #262626;
@@ -48,24 +48,27 @@ body {
     transform: translateX(-50%);
 }
 
-.post {
-    position: relative;
-    background-color: #262626;
-    border-radius: 5px;
-    width: 564px;
-    height: 468px;
+.post,
+.create_post {
+    position: absolute;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
 }
 
+.post {
+    background-color: #262626;
+    border-radius: 5px;
+    width: 564px;
+    height: 468px;
+    top: 35%;
+}
+
 .create_post {
-    position: relative;
     background-color: #8c9231;
     border-radius: 5px;
     width: 564px;
     height: 139px;
-    left: 50%;
-    top: 0%;
-    transform: translateX(-50%);
     z-index: 2;
+    top: 15%;
 }
