--- a/home-page/src/app/app.component.html
+++ b/home-page/src/app/app.component.html
@@ -9,8 +9,24 @@
         <div class="nav_bar" id="nav_bar"></div>
     </div>
         <div class="feed" id="feed">
-            <div class="post" id="post"></div>
-        <div class="create_post" id="create_post"></div>
-    </div>   
+            <div class="post" id="post">
+                <div class="post_votes" id="post_votes"></div>
+                <div class="post_comments" id="post_comments"></div>
+                <div class="post_share" id="post_share"></div>
+                <div class="post_submit" id="post_submit"></div>
+                <div class="post_photo1" id="post_photo1"></div>
+                <div class="post_photo2" id="post_photo2"></div>
+                <div class="post_pic" id="post_pic"></div>
+            </div>
+        <div class="create_post" id="create_post">
+            <div class="create_post_img" id="create_post_img"></div>
+            <div class="create_post_gif" id="create_post_gif"></div>
+            <div class="create_post_emoji" id="create_post_emoji"></div>
+            <div class="create_post_submit" id="create_post_submit"></div>
+            <div class="create_post_typebar" id="create_post_typebar"></div>
+            <div class="create_post_pic" id="create_post_pic"></div>
+        </div>
+    </div>
+    <div class="ad_panel" id="ad_panel"></div>
 </body>
 </html>
