--- a/home-page/src/app/app.component.css
+++ b/home-page/src/app/app.component.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     justify-content: center;
     background-color: #181818;
-    height: 100vh;
+    height: auto;
 }
 
 .header {
@@ -34,7 +34,8 @@ body {
 
 .feed {
     position: relative;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     background-color: #181818;
     border-right: 3px solid #262626;
@@ -47,23 +48,38 @@ body {
 
 .post,
 .create_post {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.post {
+    position: relative;
     background-color: #262626;
     border-radius: 5px;
     width: 564px;
-    height: 468px;
-    top: 35%;
-    z-index: 2;
+    margin-bottom: 20px;
 }
 
-.post_votes {
+.post {
+    height: 468px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.create_post {
+    height: 139px;
+    top: 15%;
+}
+
+.post_votes,
+.post_comments,
+.post_share,
+.post_submit,
+.post_photo1,
+.post_photo2,
+.post_pic {
     position: absolute;
+}
+
+
+.post_votes {
     border: 2px solid #181818;
     background-color: #FCA573;
     border-radius: 10px;
@@ -75,7 +91,6 @@ body {
 }
 
 .post_comments {
-    position: absolute;
     border: 2px solid #181818;
     background-color: #FCA573;
     border-radius: 10px;
@@ -87,7 +102,6 @@ body {
 }
 
 .post_share {
-    position: absolute;
     border: 2px solid #181818;
     background-color: #FCA573;
     border-radius: 10px;
@@ -99,7 +113,6 @@ body {
 }
 
 .post_submit {
-    position: absolute;
     border: 2px solid #181818;
     background-color: #FCA573;
     width: 24px;
@@ -110,7 +123,6 @@ body {
 }
 
 .post_photo1 {
-    position: absolute;
     border: 0.1px solid rgb(0, 0, 0);
     background-color: #ffffff;
     width: 281px;
@@ -121,7 +133,6 @@ body {
 }
 
 .post_photo2 {
-    position: absolute;
     border: 0.1px solid rgb(0, 0, 0);
     background-color: #ffffff;
     width: 281px;
@@ -132,7 +143,6 @@ body {
 }
 
 .post_pic {
-    position: absolute;
     border: 1px solid #181818;
     background-color: #ffffff;
     border-radius: 20px;
@@ -143,14 +153,26 @@ body {
     left: 2%;
 }
 
+.create_post_img,
+.create_post_gif,
+.create_post_emoji,
+.create_post_submit,
+.create_post_typebar,
+.create_post_pic {
+    position: absolute;
+}
+
+
 .create_post {
+    position: inherit;
     background-color: #262626;
     border-radius: 5px;
     width: 564px;
     height: 139px;
-    z-index: 2;
+    margin-bottom: 20px;
     top: 15%;
 }
+
 
 .create_post_img {
     position: absolute;
@@ -223,6 +245,7 @@ body {
     bottom: 68%;
     left: 2%;
 }
+
 
 .ad_panel {
     background-color: #262626;
