--- a/home-page/src/app/app.component.html
+++ b/home-page/src/app/app.component.html
@@ -28,6 +28,7 @@
             <div class="create_post_pic" id="create_post_pic"></div>
         </div>
     <div class="ad_panel" id="ad_panel"></div>
+    <div class="barras" id="barras"></div>
 
     
 <script>
