--- a/home-page/src/app/app.component.css
+++ b/home-page/src/app/app.component.css
@@ -38,8 +38,6 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #181818;
-    border-right: 3px solid #262626;
-    border-left: 3px solid #262626;
     width: 604px;
     left: 50%;
     height: 100%;
@@ -253,4 +251,19 @@ body {
     position: fixed;
     top: 16%;
     right: 19%;
+}
+
+.barras {
+    backface-visibility: hidden;
+    width: 251px;
+    height: 473px;
+    position: fixed;
+    top: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-right: 3px solid #262626;
+    border-left: 3px solid #262626;
+    width: 604px;
+    height: 100%;
+    z-index: 1;
 }
