--- a/home-page/src/app/app.component.css
+++ b/home-page/src/app/app.component.css
@@ -125,6 +125,11 @@ body {
     left: 0%;
 }
 
+.post_photo1 img {
+    width: 100%;
+    height: 100%;
+}
+
 .post_photo2 {
     border: 0.1px solid rgb(0, 0, 0);
     background-color: #ffffff;
@@ -133,6 +138,11 @@ body {
     z-index: 3;
     bottom: 15%;
     right: 0%;
+}
+
+.post_photo2 img {
+    width: 100%;
+    height: 100%;
 }
 
 .post_pic {
@@ -151,6 +161,7 @@ body {
 .create_post_emoji,
 .create_post_submit,
 .create_post_typebar,
+.typebar_text,
 .create_post_pic {
     position: absolute;
 }
@@ -167,6 +178,7 @@ body {
     transform: translateX(-50%);
     margin-top: 7%;
     order: -1;
+    z-index: 2;
 }
 
 
@@ -218,16 +230,19 @@ body {
     right: 2%;
 }
 
-.create_post_typebar {
+
+
+.typebar_text {
     position: absolute;
     border: 0.1px solid grey;
     background-color: #181818;
     border-radius: 20px;
     width: 494px;
     height: 32px;
-    z-index: 3;
-    bottom: 68%;
-    right: 2%;
+    z-index: 1;
+    margin-top: 12px;
+    left: 54px;
+    color: #ffffff;
 }
 
 .create_post_pic {
@@ -243,14 +258,74 @@ body {
 }
 
 
-.ad_panel {
+.recomended_panel {
     background-color: #262626;
     border-radius: 5px;
     width: 251px;
-    height: 473px;
-    position: fixed;
-    top: 16%;
-    right: 19%;
+    height: 342px;
+    position: sticky;
+    bottom: 49%;
+    left: 67.5%;
+}
+
+.follower1_follow {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #FCA573;
+    border-radius: 20px;
+    width: 72px;
+    height: 24px;
+    left: 65%;
+    top: 17%;
+}
+
+.follower2_follow {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #FCA573;
+    border-radius: 20px;
+    width: 72px;
+    height: 24px;
+    left: 65%;
+    top: 32%;
+}
+
+.follower3_follow {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #FCA573;
+    border-radius: 20px;
+    width: 72px;
+    height: 24px;
+    left: 65%;
+    top: 47%;
+}
+
+.follower4_follow {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #FCA573;
+    border-radius: 20px;
+    width: 72px;
+    height: 24px;
+    left: 65%;
+    top: 62%;
+}
+
+.follower5_follow {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #FCA573;
+    border-radius: 20px;
+    width: 72px;
+    height: 24px;
+    left: 65%;
+    top: 77%;
 }
 
 .barras {
