--- a/home-page/src/app/app.component.html
+++ b/home-page/src/app/app.component.html
@@ -24,10 +24,27 @@
             <div class="create_post_gif" id="create_post_gif"></div>
             <div class="create_post_emoji" id="create_post_emoji"></div>
             <div class="create_post_submit" id="create_post_submit"></div>
-            <div class="create_post_typebar" id="create_post_typebar"></div>
+            <div class="create_post_typebar" id="create_post_typebar">
+              <input class="typebar_text" type="text" id="typebar_text" name="typebar_text"> 
+            </div>
             <div class="create_post_pic" id="create_post_pic"></div>
         </div>
-    <div class="ad_panel" id="ad_panel"></div>
+    <div class="recomended_panel" id="recomended_panel">
+      <div class="follower1" id="follower1">
+        <div class="follower1_follow" id="follower1_follow"></div></div>
+      <div class="follower2" id="follower2">
+        <div class="follower2_follow" id="follower2_follow"></div>
+      </div>
+      <div class="follower3" id="follower3">
+        <div class="follower3_follow" id="follower3_follow"></div>
+      </div>
+      <div class="follower4" id="follower4">
+        <div class="follower4_follow" id="follower4_follow"></div>
+      </div>
+      <div class="follower5" id="follower5">
+        <div class="follower5_follow" id="follower5_follow"></div>
+      </div>
+    </div>
     <div class="barras" id="barras"></div>
 
     
@@ -56,10 +73,16 @@ function createPostElement() {
 
   const postPhoto1 = document.createElement('div');
   postPhoto1.classList.add('post_photo1');
+  const postPhoto1Image = document.createElement('img');
+  postPhoto1Image.src = 'Mildred_Harris_auto_to_Louise_Glaum_R-256x343.jpg';
+  postPhoto1.appendChild(postPhoto1Image);
   post.appendChild(postPhoto1);
 
   const postPhoto2 = document.createElement('div');
   postPhoto2.classList.add('post_photo2');
+  const postPhoto2Image = document.createElement('img');
+  postPhoto2Image.src = '2f7097bde863d9bb85b8aecb874f7691.jpg';
+  postPhoto2.appendChild(postPhoto2Image);
   post.appendChild(postPhoto2);
 
   const postPic = document.createElement('div');
@@ -108,7 +131,7 @@ window.addEventListener('scroll', () => {
     clearTimeout(debounceTimeout);
     debounceTimeout = setTimeout(() => {
       newPost();
-    }, 500); // Adjust the delay as needed (in milliseconds)
+    }, 450); // Adjust the delay as needed (in milliseconds)
   }
 
   previousScrollPosition = currentScrollPosition;
