--- a/home-page/src/app/app.component.html
+++ b/home-page/src/app/app.component.html
@@ -29,25 +29,32 @@
             </div>
             <div class="create_post_pic" id="create_post_pic"></div>
         </div>
-    <div class="recomended_panel" id="recomended_panel">
+    <div class="recommended_panel" id="recommended_panel">
+      <div class="recommended_panel_title" id="recommended_panel_title"><b>Recommended Pages</b></div>
+      <div class="recommended_panel_footer" id="recommended_panel_footer">More Recommended Pages</div>
       <div class="follower1" id="follower1">
         <div class="follower1_follow" id="follower1_follow"></div>
         <div class="follower1_pic" id="follower1_pic"></div>
+        <div class="follower1_name" id="follower1_name">David</div>
       <div class="follower2" id="follower2">
         <div class="follower2_follow" id="follower2_follow"></div>
         <div class="follower2_pic" id="follower2_pic"></div>
+        <div class="follower2_name" id="follower2_name">Vanessa</div>
       </div>
       <div class="follower3" id="follower3">
         <div class="follower3_follow" id="follower3_follow"></div>
         <div class="follower3_pic" id="follower3_pic"></div>
+        <div class="follower3_name" id="follower2_name">Luisa</div>
       </div>
       <div class="follower4" id="follower4">
         <div class="follower4_follow" id="follower4_follow"></div>
         <div class="follower4_pic" id="follower4_pic"></div>
+        <div class="follower4_name" id="follower4_name">Guilherme</div>
       </div>
       <div class="follower5" id="follower5">
         <div class="follower5_follow" id="follower5_follow"></div>
         <div class="follower5_pic" id="follower5_pic"></div>
+        <div class="follower5_name" id="follower5_name">Sofia</div>
       </div>
     </div>
     <div class="barras" id="barras"></div>
