--- a/home-page/src/app/app.component.html
+++ b/home-page/src/app/app.component.html
@@ -57,6 +57,7 @@
         <div class="follower5_name" id="follower5_name">Sofia</div>
       </div>
     </div>
+  </div>
     <div class="barras" id="barras"></div>
 
     
