--- a/home-page/src/app/app.component.html
+++ b/home-page/src/app/app.component.html
@@ -59,6 +59,20 @@
     </div>
   </div>
     <div class="barras" id="barras"></div>
+    <div class="trending_page" id="trending_page">
+      <div class="trending_panel_title" id="trending_panel_title"><b>Trending</b></div>
+      <div class="trending_themes" id="trending_themes">Themes</div>
+      <div class="theme1" id="theme1"></div>
+      <div class="theme1_name" id="theme1_name">Games</div>
+      <div class="theme2" id="theme2"></div>
+      <div class="theme2_name" id="theme2_name">Sports</div>
+      <div class="theme3" id="theme3"></div>
+      <div class="theme3_name" id="theme3_name">Cripto</div>
+      <div class="theme4" id="theme4"></div>
+      <div class="theme4_name" id="theme4_name">Music</div>
+      <div class="theme5" id="theme5"></div>
+      <div class="theme5_name" id="theme5_name">Actors</div>
+    </div>
 
     
 <script>
